// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput should be rendered correctly 1`] = `
<DocumentFragment>
  <div
    class="container uui-input-box -clickable root uui-size-36 mode-form"
    tabindex="-1"
  >
    <input
      class="uui-input"
      tabindex="0"
      type="text"
      value=""
    />
  </div>
</DocumentFragment>
`;

exports[`TextInput should be rendered correctly 2`] = `
<DocumentFragment>
  <div
    class="container uui-input-box -clickable root uui-size-36 mode-form"
    tabindex="-1"
  >
    <input
      class="uui-input"
      tabindex="0"
      type="text"
      value=""
    />
    <div
      class="container uui-icon uui-enabled"
    >
      <svg
        class=""
      />
    </div>
    <div
      class="container uui-icon uui-enabled pointer"
    >
      <svg
        class="flipY"
      />
    </div>
  </div>
</DocumentFragment>
`;
